# wasm_shenzhen_solitaire

./: Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md
design/: TODO.md  motivation.md
docs/: index.html  wasm_shenzhen_solitaire.js  wasm_shenzhen_solitaire.wasm
src/: game.rs  main.rs
src/common/: game_state.rs  inner_common.rs  mod.rs  rendering.rs
static/: index.html
